# holiday_reservation_saga

./: docker-compose.yaml  pyproject.toml
infrastructure/mongodb/: mongodb_helper.py  reservation_repository.py
modules/reservations/domain/: abstract_reservation_domain_service.py  reservation_domain_service.py
modules/reservations/domain/entities/: reservation.py
modules/reservations/facade/: abstract_reservation_facade.py  reservation_facade.py
modules/reservations/shared_kernel/custom_types/: reservation_id.py
modules/saga/domain/entities/: saga.py
presentation/: __init__.py  endpoints.py
presentation/templates/reservations/: reservation_page.html
shared/: abstract_repository.py
shared/custom_types/: collection_name.py  database_name.py  entity_id.py
shared/entities/: aggregate_root.py  entity_base.py
